Complete basic set up with localhost on chrome desktop

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "ProgressiveWebApp",
   "main": "index.js",
   "scripts": {
+    "frontend": "npm start --prefix ./frontend",
+    "backend": "npm start --prefix ./backend",
+    "start": "npm-run-all --parallel frontend backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +17,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
