--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "env-cmd": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
+    "fs": "0.0.1-security",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
@@ -62,7 +64,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "env-cmd -f .env node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -137,6 +139,7 @@
       "jest-watch-typeahead/testname"
     ]
   },
+  "proxy": "http://localhost:5000",
   "babel": {
     "presets": [
       "react-app"
