--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^1.19.3",
     "npm-run-all": "^4.1.5"
   }
 }
