--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "ProgressiveWebApp",
   "main": "index.js",
   "scripts": {
-    "frontend": "npm start --prefix ./frontend",
-    "backend": "npm start --prefix ./backend",
-    "start": "npm-run-all --parallel frontend backend",
+    "build-frontend": "npm run build --prefix ./frontend",
+    "run-server": "npm start --prefix ./backend",
+    "start": "npm-run-all --parallel build-frontend run-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
