--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "progressivewebapp",
   "version": "1.0.0",
   "description": "ProgressiveWebApp",
-  "main": "index.js",
   "scripts": {
-    "build-frontend": "npm run build --prefix ./frontend",
-    "run-server": "npm start --prefix ./backend",
-    "start": "npm-run-all --parallel build-frontend run-server",
+    "watch-frontend": "nodemon --watch ./frontend --ignore ./frontend/build --exec \"npm run build --prefix ./frontend\"",
+    "watch-backend": "nodemon --watch ./backend --exec \"npm start --prefix ./backend\"",
+    "start": "npm-run-all --parallel watch-frontend watch-backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
