Make service worker use workbox scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "ProgressiveWebApp",
   "scripts": {
-    "watch-frontend": "nodemon --watch ./frontend --ignore ./frontend/build --exec \"npm run build --prefix ./frontend\"",
-    "watch-backend": "nodemon --watch ./backend --exec \"npm start --prefix ./backend\"",
+    "watch-frontend": "nodemon --watch frontend/ --ext jsx,js,json,css --ignore frontend/build/ --exec \"npm run build --prefix ./frontend\"",
+    "watch-backend": "nodemon --watch backend/ --exec \"npm start --prefix ./backend\"",
     "start": "npm-run-all --parallel watch-frontend watch-backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
