--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "ProgressiveWebApp",
   "scripts": {
+    "dev-frontend": "npm start --prefix ./frontend",
     "watch-frontend": "nodemon --watch frontend/ --ext jsx,js,json,css --ignore frontend/build/ --exec \"npm run build --prefix ./frontend\"",
     "watch-backend": "nodemon --watch backend/ --exec \"npm start --prefix ./backend\"",
-    "start": "npm-run-all --parallel watch-frontend watch-backend",
+    "build": "npm-run-all --parallel watch-frontend watch-backend",
+    "start": "npm-run-all --parallel dev-frontend watch-backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
