--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -30,6 +30,6 @@
         "no-multiple-empty-lines": ["error", { "max": 1}],
         "react/jsx-closing-tag-location": ["error", "always"],
         "comma-dangle": ["error", "only-multiline"],
-        "no-console": "error"
+        "no-console": "off"
     }
 }
